--- a/test/fixtures/transactions.yml
+++ b/test/fixtures/transactions.yml
@@ -6,6 +6,7 @@ one:
   transaction_date: 2017-02-03
   category: MyString
   transaction_type: MyString
+  account: one
 
 two:
   explanation: MyString
@@ -13,3 +14,4 @@ two:
   transaction_date: 2017-02-03
   category: MyString
   transaction_type: MyString
+  account: two
