--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,9 +1,13 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  name: MyString
-  email: MyString
+  name: Example User
+  email: exampleuser@example.com
+  #password: password
+  #password_confirmation: password
 
 two:
-  name: MyString2
-  email: MyString2
+  name: Jane
+  email: Doe
+  #password: foobar
+  #password_confirmation: foobar
